--- a/static/styles.css
+++ b/static/styles.css
@@ -2,14 +2,14 @@
 :root {
     --background-color: #ffffff;
     --text-color: #000000;
-    --primary-color: #4CAF50;
+    --primary-color: #cc5631;
     --secondary-color: #f0f0f0;
 }
 
 [data-theme="dark"] {
     --background-color: #2e2e2e;
     --text-color: #ffffff;
-    --primary-color: #9acd32;
+    --primary-color: #cc5631;
     --secondary-color: #3e3e3e;
 }
 
